networkpolicy/pod-demo-e.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: yauritux/busybox-curl
    imagePullPolicy: IfNotPresent
