networkpolicy/pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  containers:
  - name: tomcat
    image: tomcat:8.5-alpine
    imagePullPolicy: IfNotPresent
    ports:
    - name: tomcat
      containerPort: 8080
