networkpolicy/allow-some-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-some-egress
spec:
  podSelector:
    matchLabels:
      app: myapp
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.1.5/16
#    ports:
#    - protocol: TCP
#      port: 80
  policyTypes:
  - Egress
