networkpolicy/allow-some-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-some-ingress
spec:
  podSelector:
    matchLabels:
      app: myapp
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.2.0/24
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Ingress
